(executable
  (name input)
  (libraries cohttp cohttp-lwt-unix lwt.unix))

(env
  (dev
    (flags (:standard -warn-error -A))))

(executable
  (name day01))

(executable
  (name day02))

(executable
  (name day03))

(executable
  (name day04))

(executable
  (name day05))

(executable
  (name day06))

(executable
  (name day07))
