(executable
  (name input)
  (libraries cohttp cohttp-lwt-unix lwt.unix))

(env
  (dev
    (ocamlopt_flags (:standard -O3))
    (flags (:standard -warn-error -A))))

(executable
  (name day01))

(executable
  (name day02))

(executable
  (name day03))

(executable
  (name day04))

(executable
  (name day05))

(executable
  (name day06))

(executable
  (name day07))

(executable
  (name day08))

(executable
  (name day09))

(executable
  (name day10))

(executable
  (name day11))

(executable
  (name day12))

(executable
  (name day13))

(executable
  (name day14))

(executable
  (name day15))

(executable
  (name day16))

(executable
  (name day17))

(executable
  (name day18))

(executable
  (name day19))

(executable
  (name day20))
